# C_and_Java_Android

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/firstlab/: FirstTaskActivity.java  MainActivity.java  PinpadActivity.java  SecondTaskActivity.java
app/src/main/res/layout/: activity_main.xml  first_task_activity.xml  pinpad_activity.xml  second_task_activity.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
